# WhatIsMyTip

./: .env.production  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  check.py  docker-compose.yml  get_logs.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  TEST_REPORT.md  alembic.ini  check_db.py  check_games.py  check_none_teams.py  clean_duplicates.py  list_routes.py  main.py  project.yml  pyproject.toml  requirements.txt  test_app_setup.py  test_config_and_api.py  test_cron_infrastructure.py  test_cron_setup.py  test_db_config.py  test_db_connection.py  test_driver_selection.py  test_elo_cache_fix.py  test_engine_creation.py  test_full_startup.py  test_imports.py  test_minimal.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_squiggle.py
backend-faas/: .env.example  README.md  project.yml  pyproject.toml
backend-faas/alembic/: env.py
backend-faas/alembic/versions/: 2026_05_28_1613-0001_consolidated_postgresql_schema.py  2026_06_10_0600-0002_weather_players_injuries.py
backend-faas/scripts/: _check_counts.py  _check_games.py  _check_season.py  deploy.sh  dev.sh  export_seed_csv.py  load_csv_to_db.py  migrate_and_seed.py  run-migrations.sh  run_model_backtest.py  run_next_round_predictions.py  scrape_to_csv.py  seed_data.py  seed_player_data.py  show_predictions.py  sync_squiggle_games.py  test.sh
backend-faas/tests/: conftest.py
backend-faas/tests/integration/: __init__.py  test_api_integration.py  test_cache_integration.py  test_db_integration.py
backend-faas/tests/unit/: test_afl_tables_client.py  test_alerting.py  test_api_admin.py  test_api_backtest.py  test_api_games.py  test_api_helpers_security.py  test_api_tips.py  test_cache.py  test_cron_daily_sync.py  test_cron_historic_refresh.py  test_cron_match_completion.py  test_cron_tip_generation.py  test_cron_utils.py  test_exceptions.py  test_footywire_client.py  test_health_check.py  test_heuristics.py  test_injury_impact_model.py  test_load_csv_to_db.py  test_matchup_model.py  test_migrate_and_seed.py  test_model_backtest.py  test_models.py  test_new_models.py  test_player_form_model.py  test_schemas_validation.py  test_scrape_to_csv.py  test_seed_data.py  test_seed_player_data.py  test_squiggle_utils.py  test_structured_logging.py  test_weather_client.py  test_weather_impact_model.py
backend/alembic/: README  env.py
backend/alembic/versions/: 2026_03_30_2320-48910ce1b31b_initial_migration.py  2026_03_31_0003-4a4ab87d9071_add_unique_constraint_to_tips.py  2026_03_31_1024-b2c3d4e5f6a7_add_composite_indexes.py  2026_03_31_1540-c786defe6998_add_model_predictions_table.py  2026_03_31_1756-a1b2c3d4e5f6_add_status_tracking_to_games.py  2026_03_31_1831-ddf16b980603_add_generation_progress_table.py  2026_03_31_1840-0fc5de95b2f1_sync_model_and_migrations.py  2026_04_02_1330-9a1b2c3d4e5f_add_cron_job_tables.py  2026_04_02_2143-ef5dc0ca76d2_add_sync_tracking_to_games.py  2026_04_14_0900-a2b3c4d5e6f7_clear_existing_explanations.py  2026_04_14_1746-8b7a6014748b_add_match_analysis_table.py  2026_04_15_1100-deduplicate_model_predictions.py  2026_04_16_2300-add_slug_to_games.py  2026_06_21_0200-0004_canonical_team_names.py  (+4 more)
backend/app/: __init__.py  cache.py  config.py  logger.py  orchestrator.py  utils.py
backend/certs/: do-managed-postgres-ca.crt
backend/logs/: curl-sweep-summary.md  integration-test-suite-summary.md
backend/proxy/: Dockerfile  nginx.conf
backend/scripts/: _reset_matches.py  _run_round.py  _show_tips.py  backfill_round_tips.py  canonicalize_team_names.py  check_db_data.py  curl_sweep.py  deploy.sh  dev.sh  diag_backtest.py  export_seed_csv.py  generate_historical_data.py  generate_tips_cron.py  get-fn-urls.ps1  load_csv_to_db.py  migrate_and_seed.py  refresh_data.py  run-migrations.sh  run_model_backtest.py  run_model_retrain.py  run_walkforward_backfill.py  scrape_to_csv.py  seed_data.py  seed_player_data.py  setup-db.sh  sync_games_cron.py  sync_squiggle_games.py  test-integration.sh  test.sh  test_dockerfile.sh
backend/tests/: conftest.py
(+282 files in other folders)
