[project]
name = "whatismytip-faas"
version = "1.0.0"
description = "WhatIsMyTip FaaS Backend - Digital Ocean Functions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "openai>=1.57.0",
    "redis>=5.0.0",
    "croniter>=2.0.0",
    "alembic>=1.14.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "testcontainers>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
