[project]
name = "whatismytip-faas"
version = "1.0.0"
description = "WhatIsMyTip FaaS Backend - Digital Ocean Functions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "openai>=1.57.0",
    "redis>=5.0.0",
    "tzdata>=2024.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # SEC-LO-008: defusedxml protects against XML-borne attacks
    # (billion laughs, quadratic blowup, XXE) when parsing
    # untrusted XML.  Prefer it over lxml.etree.fromstring for any
    # external input.
    "defusedxml>=0.7.1",
    "apscheduler>=3.11.2",
    # Runtime DB tooling.  ``scripts/migrate_and_seed.py`` (run by the
    # ``init-data`` compose service) imports ``alembic`` and uses
    # ``psycopg2`` to talk to Postgres, so these need to be installed in
    # the production image, not just in the dev dependency-group.
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "testcontainers>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "postgres: tests that require a running Podman/Postgres for testcontainers-style fixtures (skip when Podman is not available)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N999"]

[tool.ruff.lint.per-file-ignores]
"packages/shared/openrouter/client.py" = ["E501"]
"tests/unit/test_afl_tables_client.py" = ["E501"]
"tests/unit/test_footywire_client.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [
    "alembic/",
    "scripts/",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
